<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright (C) 2013 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" style="@style/MainLayout"
    tools:context=".BeGenerousActivity">
    
    <!-- GIFT REQUEST STATUS AREA -->
    <RelativeLayout android:id="@+id/status_area" style="@style/SignInOutBar">
        <TextView
            android:id="@+id/tv_gift_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageViewSendGift"
            android:layout_toLeftOf="@+id/imageViewReceiveGift"
            android:text="@string/loading_ellipsis"
            android:gravity="left"
            style="@style/SignInOutBarBlurb"/>

        <TextView
            android:id="@+id/tv_request_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageViewReceiveGift"
            android:layout_alignParentRight="true"
            android:text="@string/loading_ellipsis"
            android:gravity="left"
            style="@style/SignInOutBarBlurb"/>

        <ImageView
            android:id="@+id/imageViewReceiveGift"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/tv_request_count"
            android:layout_alignBottom="@+id/tv_request_count"
            android:scaleType="fitEnd"
            android:contentDescription="@string/request_icon_description"
            android:src="@drawable/ic_send_request" />

        <ImageView
            android:id="@+id/imageViewSendGift"
            android:layout_width="20sp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_request_count"
            android:layout_alignBottom="@+id/tv_request_count"
            android:layout_alignParentLeft="true"
            android:scaleType="fitEnd"
            android:contentDescription="@string/gift_icon_description"
            android:src="@drawable/ic_send_gift" />

    </RelativeLayout>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/avatar"
            android:layout_gravity="center_horizontal"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/playerName"
            android:layout_gravity="center_horizontal"
           />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/playerEmail"
            android:layout_gravity="center_horizontal"
            />

    <!-- MAIN DISPLAY -->
    <RelativeLayout style="@style/MainDisplay">


        <ImageButton
            android:id="@+id/button_send_gift"
            style="@style/Button"
            android:contentDescription="@string/send_gift"
            android:src="@drawable/ic_send_gift" />
        
        <ImageButton
            android:id="@+id/button_send_request"
            style="@style/Button"
            android:contentDescription="@string/send_request"
            android:src="@drawable/ic_send_request"
            android:layout_toRightOf="@id/button_send_gift" />
        <ImageButton
            android:id="@+id/button_open_inbox"
            style="@style/Button"
            android:contentDescription="@string/open_inbox"
            android:src="@drawable/ic_open_inbox"
            android:layout_toRightOf="@id/button_send_request" />


    </RelativeLayout>

    <!-- SIGN-IN BAR -->
    <LinearLayout android:id="@+id/sign_in_bar" style="@style/SignInOutBar">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in" style="@style/SignInButton" />

        <TextView style="@style/SignInOutBarBlurb" android:text="@string/sign_in_explanation" />
    </LinearLayout>

    <!-- SIGN-OUT BAR -->
    <LinearLayout android:id="@+id/sign_out_bar" style="@style/SignInOutBar"
        android:visibility="gone">

        <TextView style="@style/SignInOutBarBlurb"
            android:text="@string/you_are_signed_in" />

         <Button style="@style/SignOutButton" android:id="@+id/button_sign_out"
             android:text="@string/sign_out" />

    </LinearLayout>
</LinearLayout>
